--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,29 +25,35 @@ dependencies:
   carousel_slider: ^4.0.0
   contacts_service: ^0.6.3
   cupertino_icons: ^1.0.2
+  # fluttercontactpicker: ^4.5.1
   flutter:
     sdk: flutter
   flutter_background_service: ^0.1.5
+  dependency_validator: ^3.0.0
   flutter_launcher_icons: ^0.9.2
   flutter_phone_direct_caller: ^2.0.0
   flutter_slidable: ^0.6.0
   flutter_spinkit: ^5.1.0
-  flutter_webview_plugin: ^0.4.0
-  fluttertoast: ^8.0.8
-  geocoder: ^0.2.1
+  webview_flutter: ^2.0.12
+  fluttertoast: ^7.0.0
   geolocator: ^5.1.1
   google_fonts: ^2.1.0
   location: ^2.3.5
   lottie: ^1.2.1
-  permission_handler: ^8.1.6
+  permission_handler: ^10.4.0				
   pinput: ^1.2.1
   shake: ^1.0.1
   shared_preferences: ^2.0.5
-  sms_maintained: ^0.2.5
+  flutter_sound: ^8.3.10
+  flutter_sms: ^2.3.3
   telephony: ^0.1.4
   url_launcher: ^6.0.10
-  vibration: ^1.7.3
   workmanager: ^0.4.1
+  cloudinary_public: ^0.21.0
+
+  # mic_stream: ^0.5.3+1
+  permission_handler_web: ^0.0.2
+  riverpod: 1.0.0
 
 dev_dependencies:
   flutter_test:
